--- a/2일차.md
+++ b/2일차.md
@@ -1,9 +1,13 @@
 # 사실(Facts): 어떠한 일들이 있었는지
 - tuple과 list은 서로 달랐다.
+- Circuit Evaluation을 알게 되었다.
 # 발견(Discovery): 그 속에서 알게된 점은 무엇인지
 - tuple은 불가변형 타입이라 자료의 값을 바꿀 수 없었다.
 - 반대로 list는 가변형 타입으로 자료의 값을 변경할 수 있다.
+- 단락평가에서는 하나만 참이면 되므로 (True or 4)에서 결과값이 바로 True가 나온다.
 # 배운점(Lesson Learned): 어떤 점을 배웠는지
-- 두 개의 용도가 다름을 알고 적절한 상황에 사용할 수 있게 되었다.
+- 두 자료형의 용도가 다름을 알고 적절한 상황에 사용할 수 있게 되었다.
+- 지금까지 비교연산자의 사용에서 왜 그러한 결과가 나왔는지 이해하게 되었다.
 # 선언(Daclaration): 배우고 알게 된 점을 바탕으로 앞으로 무엇을 하고 싶은지
 - list는 지금까지 많이 써왔던 것이므로 tuple을 사용할 수 있는 상황에 tuple을 적용해보고 싶다.
+- 조건문 안에서 비교연산자를 사용할 일이 많은데, 단락평가를 고려하여 결과값을 미리 예측할 것이다.
