--- a/2일차.md
+++ b/2일차.md
@@ -2,9 +2,9 @@
 - tuple과 list은 서로 달랐다.
 - Circuit Evaluation을 알게 되었다.
 # 발견(Discovery): 그 속에서 알게된 점은 무엇인지
-- tuple은 불가변형 타입이라 자료의 값을 바꿀 수 없었다.
-- 반대로 list는 가변형 타입으로 자료의 값을 변경할 수 있다.
-- 단락평가에서는 하나만 참이면 되므로 (True or 4)에서 결과값이 바로 True가 나온다.
+- tuple은 **불가변형 타입**이라 자료의 값을 바꿀 수 없었다.
+- 반대로 list는 **가변형 타입**으로 자료의 값을 변경할 수 있다.
+- 단락평가에서는 **하나만 참**이면 되므로 (True or 4)에서 결과값이 바로 True가 나온다.
 # 배운점(Lesson Learned): 어떤 점을 배웠는지
 - 두 자료형의 용도가 다름을 알고 적절한 상황에 사용할 수 있게 되었다.
 - 지금까지 비교연산자의 사용에서 왜 그러한 결과가 나왔는지 이해하게 되었다.
