--- a/2일차.md
+++ b/2일차.md
@@ -11,3 +11,5 @@
 # 선언(Daclaration): 배우고 알게 된 점을 바탕으로 앞으로 무엇을 하고 싶은지
 - list는 지금까지 많이 써왔던 것이므로 tuple을 사용할 수 있는 상황에 tuple을 적용해보고 싶다.
 - 조건문 안에서 비교연산자를 사용할 일이 많은데, 단락평가를 고려하여 결과값을 미리 예측할 것이다.
+
+new
